added some changes

--- a/my-portfolio/about.html
+++ b/my-portfolio/about.html
@@ -15,10 +15,10 @@
         <div class="navLink">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/my-portfolio/about.html">About</a></li>
-                <li><a href="/my-portfolio/portfolio.html">Portfolio</a></li>
-                <li><a href="/my-portfolio/blog.html">Blog</a></li>
-                <li><a href="/my-portfolio/contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
