made some changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>A Frontend Developer passionate about helping people understand
                products by creating useful interfaces, and making accessible web applications 
             </p>
-            <a href="my-portfolio/SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
+            <a href="./my-portfolio/SHIRLEY ONYINYECHI ABAEGBU.pdf ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
         </div>
     </section>
 
