--- a/my-portfolio/contact.html
+++ b/my-portfolio/contact.html
@@ -14,7 +14,7 @@
         </div> 
         <div class="navLink">
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -26,7 +26,7 @@
     <section class="sec">
         <header>
             <div class="toggle"></div>
-            <a href="/my-portfolio/portfolio.html" class="btn">My Portfolio</a>
+            <a href="portfolio.html" class="btn">My Portfolio</a>
         </header>
     </section>
 
