added some things

--- a/my-portfolio/about.html
+++ b/my-portfolio/about.html
@@ -14,7 +14,7 @@
         </div> 
         <div class="navLink">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -43,7 +43,7 @@
                 I have the ability to be a critical thinker and a problem solver. This background partly influenced my decision 
                 to developing interest in becoming a frontend developer, where I can utilise my knowledge properly. 
             </p>
-            <a href="SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
+            <a href="/my-portfolio/SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
         </div>
     </section>
 
