fixed the pages

--- a/my-portfolio/portfolio.html
+++ b/my-portfolio/portfolio.html
@@ -26,7 +26,7 @@
     <section class="sec">
         <header>
             <div class="toggle"></div>
-            <a href="portfolio.html" class="btn">My Portfolio</a>
+            <a href="SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download CV</a>
         </header>
     </section>
 
