fixed cv button in about page

--- a/my-portfolio/about.html
+++ b/my-portfolio/about.html
@@ -43,7 +43,7 @@
                 I have the ability to be a critical thinker and a problem solver. This background partly influenced my decision 
                 to developing interest in becoming a frontend developer, where I can utilise my knowledge properly. 
             </p>
-            <a href="/my-portfolio/SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
+            <a href="SHIRLEY ONYINYECHI ABAEGBU.pdf" class="btn">Download My CV</a>
         </div>
     </section>
 
